Carrierwave enabled with local storage

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,6 +6,9 @@
 %p
   %b Last name:
   = @user.last_name
+%p
+  %b Avatar:
+  = image_tag @user.avatar_url
 = link_to 'Edit', edit_user_path(@user)
 \|
 = link_to 'Back', users_path
