--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -12,5 +12,9 @@
   .field
     = f.label :last_name
     = f.text_field :last_name
+  .field
+    = f.label :avatar
+    = f.file_field :avatar
+    
   .actions
     = f.submit 'Save'
