--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,6 +2,7 @@
 
 %table
   %tr
+    %th
     %th First name
     %th Last name
     %th
@@ -10,6 +11,7 @@
 
   - @users.each do |user|
     %tr
+      %td= image_tag user.avatar.icon.url
       %td= user.first_name
       %td= user.last_name
       %td= link_to 'Show', user
