--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,5 +4,9 @@
       Text1
     %h3 
       Text2
-    = link_to 'Subscribe', '#', class: "btn btn-primary btn-subscribe"               
+    = link_to 'Subscribe', '#', class: "btn btn-primary btn-subscribe"    
     
+    %ul
+      %li 
+        = link_to 'Users', users_path           
+     
