Modifications in landing page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,6 +6,7 @@
       Text2
     = link_to 'Subscribe', '#', class: "btn btn-primary btn-subscribe"    
     
+  .row
     %ul
       %li 
         = link_to 'Users', users_path           
