--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,11 +1,10 @@
 .content
   .col-md-6
     %h1 
-      Text1
+      Desplegado desde CodeShip
     %h3 
       Text2
     = link_to 'Subscribe', '#', class: "btn btn-primary btn-subscribe"    
-    
     %ul
       %li 
         = link_to 'Users', users_path           
